ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.4
    • Affects Version/s: 2.5.4
    • Component/s: Security
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently when an applyOps op is processed by logOp(), the following error is logged:
      ERROR: Unsupported modification to roles collection in oplog; TODO how to remedy. OplogOperationUnsupported Unsupported oplog operation Oplog entry: c

      Instead, the behavior needs to be that the role graph system parses the command and responds to anything that changes role data.

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: