SERVER-11709 RoleGraph should ignore oplog entries for the applyOps command.

The individual operations in the command will be separately applied, so there's nothing for the RoleGraph to do with the applyOps command itself.

Includes an integration test of role replication.